fixed line height and reduced character count for each line to improve legibility

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -26,16 +26,31 @@ html {
   margin: 0 auto;
 }
 
+section {
+  padding: 75px 0;
+}
+
 /* -------- HEADINGS ------- */
+
+h1,
+h2 {
+  font-weight: 300;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
 
 h1 {
   margin: 0;
   color: #fff;
   font-size: 240%;
-  font-weight: 300;
-  text-transform: uppercase;
-  letter-spacing: 1px;
   word-spacing: 4px;
+}
+
+h2 {
+  font-size: 180%;
+  word-spacing: 2px;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 /* ------------------------------------ */
@@ -46,7 +61,7 @@ header {
   background-image: linear-gradient(rgba(0, 0, 0, 0.60), rgba(0, 0, 0, 0.60)), url(img/hero.jpg);
   background-size: cover;
   background-position: center;
-  height: 100vh;
+  height: 75vh;
 }
 
 .hero-header {
@@ -57,12 +72,14 @@ header {
   transform: translate(-50%, -50%);
 }
 
-.hero-summary {
+.hero-summary p {
   position: absolute;
+  text-align: justify;
   top: 40%;
-  width: 50%;
-  left: 20%;
-  color: #fff
+  width: 40%;
+  left: 25%;
+  color: #fff;
+  line-height: 150%;
 }
 
 .main-nav {
